[package]
name = "kbd-parser"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"

[dependencies]
pest = { version = "2.1.1", features = [ "pretty-print" ] }
pest_derive = "2.1.0"
pest-ast = "0.3.3"
from-pest = "0.3.1"
derivative = "1.0.2"
log = "0.4.6"


[dev-dependencies]
env_logger = "0.6.1"
rayon = "1.1.0"
