[package]
name = "xkb-parser"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "Readme.md"
description = "Parses `.xkb` (X keyboard extension) files"
repository = "https://github.com/divvun/xkb-parser"

[dependencies]
pest = { version = "2.1.1", features = [ "pretty-print" ] }
pest_derive = "2.1.0"
pest-ast = "0.3.3"
from-pest = "0.3.1"
derivative = "1.0.2"
log = "0.4.6"
shrinkwraprs = "0.2.1"

[dev-dependencies]
env_logger = "0.6.2"
rayon = "1.1.0"
walkdir = "2.2.8"

[workspace]
members = [
    ".",
    "x11-keysymdef",
]
