[package]
name = "x11-keysymdef"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "MIT" # same as keysymdef.h sources

[dependencies]
lazy_static = "1.3.0"

[build-dependencies]
pest = "2.1.1"
pest_derive = "2.1.0"
pest-ast = "0.3.3"
from-pest = "0.3.1"
