[package]
name = "x11-keysymdef"
version = "0.2.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
readme = "Readme.md"
description = "Convert among X11 keysyms, unicodes, and string names"
repository = "https://github.com/divvun/xkb-parser"

[dependencies]
lazy_static = "1.3.0"

[build-dependencies]
serde_json = "1.0.40"
serde = { version = "1.0.97", features = ["derive"] }
